fixing overflow bug in quicknote popup

--- a/quicknote/popup/quicknote.css
+++ b/quicknote/popup/quicknote.css
@@ -23,7 +23,7 @@ body {
 .outer-wrapper {
   overflow: auto;
   width: 100%;
-  height: 300px;
+  height: 290px;
   background: rgb(240,240,240);
 }
 
